--- a/build.gradle
+++ b/build.gradle
@@ -17,21 +17,23 @@ dependencies {
     compile group: 'io.vertx', name: 'vertx-web', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-auth-jwt', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-rx-java', version: '3.9.1'
-    compile group: 'io.vertx', name: 'vertx-web-client', version: '3.9.1'
+    compile group: 'io.vertx', name: 'vertx-hazelcast', version: '3.9.1'
+
+
     compile group: 'com.diabolicallabs', name: 'vertx-cron', version: '3.9.1'
 
     implementation group: 'com.couchbase.client', name: 'couchbase-client', version: '1.4.3'
     compile group: 'com.couchbase.client', name: 'java-client', version: '3.0.5'
 
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.0'
-    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
-    compile 'org.apache.commons:commons-pool2:2.8.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'io.vertx', name: 'vertx-junit5-web-client', version: '3.9.1'
+    testCompile group: 'io.vertx', name: 'vertx-web-client', version: '3.9.1'
+    testCompile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.0'
+    testCompile 'org.apache.commons:commons-pool2:2.8.0'
 }
 
 jar {
