--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,9 @@ dependencies {
 
 
     compile group: 'com.diabolicallabs', name: 'vertx-cron', version: '3.9.1'
-
-    implementation group: 'com.couchbase.client', name: 'couchbase-client', version: '1.4.3'
     compile group: 'com.couchbase.client', name: 'java-client', version: '3.0.5'
-
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    compile group: 'org.codehaus.jettison', name: 'jettison', version: '1.4.1'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
 
