--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ dependencies {
     compile group: 'io.vertx', name: 'vertx-auth-jwt', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-rx-java', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-hazelcast', version: '3.9.1'
+    compile group: 'io.vertx', name: 'vertx-redis-client', version: '3.9.1'
+    compile group: 'io.vertx', name: 'vertx-web-client', version: '3.9.1'
+
 
 
     compile group: 'com.diabolicallabs', name: 'vertx-cron', version: '3.9.1'
@@ -29,7 +32,6 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'io.vertx', name: 'vertx-junit5-web-client', version: '3.9.1'
-    testCompile group: 'io.vertx', name: 'vertx-web-client', version: '3.9.1'
     testCompile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.0'
     testCompile 'org.apache.commons:commons-pool2:2.8.0'
 }
@@ -37,7 +39,8 @@ dependencies {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.heartbeat.HBServer'
+                //'Main-Class': 'com.heartbeat.HBServer'
+                'Main-Class': 'com.tulinh.TLS'
         )
     }
     from {
