--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,8 @@ dependencies {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.heartbeat.HBServer'
-                //'Main-Class': 'com.tulinh.TLS'
+                //'Main-Class': 'com.heartbeat.HBServer'
+                'Main-Class': 'com.tulinh.TLS'
         )
     }
     from {
