--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
   "db.port": "8091",
   "db.user": "Administrator",
   "db.pwd": "n5t5lnsct",
-  "ONLINE_INFO.ONLINE_HEARTBEAT_TIME": 3600
+  "ONLINE_INFO.ONLINE_HEARTBEAT_TIME": 3600,
+  "timezone": "Asia/Ho_Chi_Minh"
 }
