--- a/build.gradle
+++ b/build.gradle
@@ -21,18 +21,13 @@ dependencies {
     compile group: 'io.vertx', name: 'vertx-redis-client', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-web-client', version: '3.9.1'
 
-
-
     compile group: 'com.diabolicallabs', name: 'vertx-cron', version: '3.9.1'
     compile group: 'com.couchbase.client', name: 'java-client', version: '3.0.5'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     compile group: 'org.codehaus.jettison', name: 'jettison', version: '1.4.1'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
-    // https://mvnrepository.com/artifact/redis.clients/jedis
-    compile group: 'redis.clients', name: 'jedis', version: '3.3.0'
-
-
+    testCompile group: 'redis.clients', name: 'jedis', version: '3.3.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'io.vertx', name: 'vertx-junit5-web-client', version: '3.9.1'
     testCompile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.0'
