--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ jar {
     manifest {
         attributes(
                 'Main-Class': 'com.heartbeat.HBServer'
-                //'Main-Class': 'com.tulinh.TLS'
+                //'Main-Class': 'com.gateway.HBGateway'
         )
     }
     from {
