--- a/config.json
+++ b/config.json
@@ -1,11 +1,13 @@
 {
   "NODE.ID" :                             1,
-  "NODE.IP" :                             "127.0.0.1",
+  "NODE.IP" :                             "18.140.197.136",
   "NODE.PORT":                            8080,
   "NODE.NAME":                            "adam",
+  "NODE.LOCAL_IP" :                       "",
   "DB.HOST":                              "localhost",
   "DB.USER":                              "Administrator",
   "DB.PWD":                               "n5t5lnsct",
+  "DB.PREFIX" :                           "VN",
   "ONLINE_INFO.ONLINE_HEARTBEAT_TIME":    30,
   "SCHEDULE.TIMEZONE":                    "Asia/Ho_Chi_Minh"
 }
