--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,15 @@ dependencies {
     compile group: 'io.vertx', name: 'vertx-hazelcast', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-redis-client', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-web-client', version: '3.9.1'
+    compile group: 'io.vertx', name: 'vertx-web-templ-freemarker', version: '3.9.1'
 
     compile group: 'com.diabolicallabs', name: 'vertx-cron', version: '3.9.1'
     compile group: 'com.couchbase.client', name: 'java-client', version: '3.0.5'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     compile group: 'org.codehaus.jettison', name: 'jettison', version: '1.4.1'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    compile group: 'com.github.rjeschke', name: 'txtmark', version: '0.13'
+
 
     testCompile group: 'redis.clients', name: 'jedis', version: '3.3.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
