--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "com.google.protobuf" version "0.8.8"
 }
 
 group 'com.heartbeat'
@@ -9,6 +10,9 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    dependencies {
+        compile 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
+    }
 }
 
 dependencies {
@@ -21,6 +25,7 @@ dependencies {
     compile group: 'io.vertx', name: 'vertx-redis-client', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-web-client', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-web-templ-freemarker', version: '3.9.1'
+    compile group: 'io.vertx', name: 'vertx-grpc', version: '3.9.1'
 
     compile group: 'com.diabolicallabs',        name:   'vertx-cron',       version: '3.9.1'
     compile group: 'com.couchbase.client',      name:   'java-client',      version: '3.0.5'
@@ -28,6 +33,7 @@ dependencies {
     compile group: 'org.codehaus.jettison',     name:   'jettison',         version: '1.4.1'
     compile group: 'ch.qos.logback',            name:   'logback-classic',  version: '1.2.3'
     compile group: 'org.fluentd',               name:   'fluent-logger',    version: '0.3.4'
+
 
     testCompile group: 'redis.clients',         name:   'jedis',            version: '3.3.0'
     testCompile group: 'junit',                 name:   'junit',            version: '4.12'
@@ -44,5 +50,22 @@ jar {
     }
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
+protobuf {
+    protoc {
+        artifact = 'com.google.protobuf:protoc:3.2.0'
+    }
+    generatedFilesBaseDir = "$projectDir/src"
+    plugins {
+        grpc {
+            artifact = "io.vertx:protoc-gen-grpc-java:1.25.0"
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc
+        }
     }
 }
