--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id "com.google.protobuf" version "0.8.8"
+    //id "com.google.protobuf" version "0.8.8"
 }
 
 group 'com.heartbeat'
@@ -11,7 +11,7 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     dependencies {
-        compile 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
+        //compile 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
     }
 }
 
@@ -25,7 +25,7 @@ dependencies {
     compile group: 'io.vertx', name: 'vertx-redis-client', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-web-client', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-web-templ-freemarker', version: '3.9.1'
-    compile group: 'io.vertx', name: 'vertx-grpc', version: '3.9.1'
+    //compile group: 'io.vertx', name: 'vertx-grpc', version: '3.9.1'
 
     compile group: 'com.diabolicallabs',        name:   'vertx-cron',       version: '3.9.1'
     compile group: 'com.couchbase.client',      name:   'java-client',      version: '3.0.5'
@@ -53,19 +53,19 @@ jar {
     }
 }
 
-protobuf {
-    protoc {
-        artifact = 'com.google.protobuf:protoc:3.2.0'
-    }
-    generatedFilesBaseDir = "$projectDir/src"
-    plugins {
-        grpc {
-            artifact = "io.vertx:protoc-gen-grpc-java:1.25.0"
-        }
-    }
-    generateProtoTasks {
-        all()*.plugins {
-            grpc
-        }
-    }
-}
+//protobuf {
+//    protoc {
+//        artifact = 'com.google.protobuf:protoc:3.2.0'
+//    }
+//    generatedFilesBaseDir = "$projectDir/src"
+//    plugins {
+//        grpc {
+//            artifact = "io.vertx:protoc-gen-grpc-java:1.25.0"
+//        }
+//    }
+//    generateProtoTasks {
+//        all()*.plugins {
+//            grpc
+//        }
+//    }
+//}
