--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile group: 'org.codehaus.jettison',     name:   'jettison',         version: '1.4.1'
     compile group: 'ch.qos.logback',            name:   'logback-classic',  version: '1.2.3'
     compile group: 'org.fluentd',               name:   'fluent-logger',    version: '0.3.4'
+// https://mvnrepository.com/artifact/org.apache.thrift/libthrift
+    compile group: 'org.apache.thrift', name: 'libthrift', version: '0.13.0'
 
 
     testCompile group: 'redis.clients',         name:   'jedis',            version: '3.3.0'
