--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     compile group: 'io.vertx', name: 'vertx-auth-jwt', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-rx-java', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-hazelcast', version: '3.9.1'
-    compile group: 'io.vertx', name: 'vertx-redis-client', version: '3.9.1'
+    //compile group: 'io.vertx', name: 'vertx-redis-client', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-web-client', version: '3.9.1'
     compile group: 'io.vertx', name: 'vertx-web-templ-freemarker', version: '3.9.1'
     //compile group: 'io.vertx', name: 'vertx-grpc', version: '3.9.1'
@@ -33,11 +33,13 @@ dependencies {
     compile group: 'org.codehaus.jettison',     name:   'jettison',         version: '1.4.1'
     compile group: 'ch.qos.logback',            name:   'logback-classic',  version: '1.2.3'
     compile group: 'org.fluentd',               name:   'fluent-logger',    version: '0.3.4'
-// https://mvnrepository.com/artifact/org.apache.thrift/libthrift
+
     compile group: 'org.apache.thrift', name: 'libthrift', version: '0.13.0'
+// https://mvnrepository.com/artifact/org.mapdb/mapdb
+    //compile group: 'org.mapdb', name: 'mapdb', version: '3.0.8'
 
 
-    testCompile group: 'redis.clients',         name:   'jedis',            version: '3.3.0'
+    //testCompile group: 'redis.clients',         name:   'jedis',            version: '3.3.0'
     testCompile group: 'junit',                 name:   'junit',            version: '4.12'
     testCompile group: 'io.vertx',              name:   'vertx-junit5-web-client', version: '3.9.1'
     testCompile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.0'
