--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     compile group: 'org.codehaus.jettison',     name:   'jettison',         version: '1.4.1'
     compile group: 'ch.qos.logback',            name:   'logback-classic',  version: '1.2.3'
     compile group: 'org.fluentd',               name:   'fluent-logger',    version: '0.3.4'
-
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.0'
     compile group: 'org.apache.thrift', name: 'libthrift', version: '0.13.0'
 // https://mvnrepository.com/artifact/org.mapdb/mapdb
     //compile group: 'org.mapdb', name: 'mapdb', version: '3.0.8'
@@ -42,8 +42,9 @@ dependencies {
     //testCompile group: 'redis.clients',         name:   'jedis',            version: '3.3.0'
     testCompile group: 'junit',                 name:   'junit',            version: '4.12'
     testCompile group: 'io.vertx',              name:   'vertx-junit5-web-client', version: '3.9.1'
-    testCompile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.0'
     testCompile 'org.apache.commons:commons-pool2:2.8.0'
+
+    testCompile ('io.socket:socket.io-client:1.0.0')
 }
 
 jar {
